<resources>
    <string name="app_name">Projeto_Final_CDM</string>
    <string name="entrar">Entrar</string>
    <string name="title_cadastro">Cadastre-se</string>
    <string name="btnCadastrarUsuarios">Cadastrar Usuário</string>
    <string name="btnListarUsuarios">Listar Usuários</string>
    <string name="id">ID</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="time">Time</string>
    <string name="enviado">Enviado</string>
    <string name="usuario">Usuario</string>
    <string name="email">email</string>
    <string name="tipo">Tipo</string>

</resources>