<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="18dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/tipo_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_view"/>

        <TextView
            android:id="@+id/email_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usuario_view"/>

        <TextView
            android:id="@+id/usuario_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_view"/>

        <TextView
            android:id="@+id/id_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>